# sponsoredai-public

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  TRUST.md  pyproject.toml
.github/workflows/: release-binaries.yml  tests.yml
npm/: README.md  package.json
npm/platform/darwin-arm64/: README.md  package.json
npm/platform/linux-x64/: README.md  package.json
npm/platform/win32-x64/: README.md  package.json
npm/scripts/: preinstall.js  stage-platform-package.js
schemas/: README.md  forbidden-fields.json  placement-event.schema.json  placement-request.schema.json  wait-state-event.schema.json
schemas/examples/: cli-rendered.json  overlay-qualified.json  privacy-schema-output.json  rejected-extra-fields.json
scripts/: check_versions.py  package_binary.py  preview_site.py  pyinstaller_entry.py  record_promo.js  seed_demo_wallet.py  set_version.py  smoke_client_binary.py
site/: demo.html  index.html  market.html  privacy.html  promo.html  terms.html  trust.html
site-v3/: admin.html  index.html  login.html  market.html  me.html  privacy.html  robots.txt  sai-core-v3.css  sai-core-v4.css  sai-v3.css  sai.css  sitemap.xml  sponsor.html  terms.html  trust.html
site-v3/_internal/: demo.html  promo.html  social-card.html
src/sai/: __init__.py  ansi.py  app_logging.py  auth_clerk.py  browser.py  cli.py  compositor.py  config.py  credits.py  dashboard.py  fonts.py  gateway.py  http_client.py  metrics.py  privacy.py  runner.py  sponsors.py  status.py  update_check.py  wallet.py
src/sai/overlay/: __init__.py  app.py  assets.py  branding.py  driver.py  geometry.py  lock.py  macos.py  surface.py  tray.py  visibility.py  win32.py  window.py
tests/: test_browser.py  test_client_binary_smoke.py  test_compositor.py  test_config.py  test_dashboard.py  test_dev_mock_browser_journeys.py  test_fonts.py  test_gateway.py  test_http_client.py  test_logging.py  test_overlay_app.py  test_overlay_branding.py  test_overlay_driver.py  test_overlay_geometry.py  test_overlay_macos.py  test_overlay_tray.py  test_overlay_visibility.py  test_package_binary.py  test_privacy.py  test_runner.py  test_site_preview.py  test_sponsors.py  test_status.py  test_update_check.py  test_versioning.py  test_wallet.py
vscode-extension/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package.json  tsconfig.json
vscode-extension/scripts/: checkPackage.js  checkVersion.js
vscode-extension/src/: adBanner.ts  extension.ts  saiCli.ts  terminals.ts  wallet.ts
vscode-extension/test/: adBanner.test.ts  checkVersion.test.ts  extension.test.ts  saiCli.test.ts  wallet.test.ts
